Styles/mmr-inlineediting.css
.inline-editing-topbar {
    position: fixed;
    top: 0;
    left: 0;
    height: 50px;
    z-index: 9996;
    margin: 0;
    padding: 0;
    font-family: Tahoma,"Helvetica Neue",Arial,Helvetica,sans-serif;
    font-size:14px;
}

/* Themes using bootstrap sets 'box-sizing:border-box' We don´t want this.  */

.inline-editing-topbar *, .inline-editing-topbar *:before, .inline-editing-topbar *:after,
.inline-editing-content-control  *, .inline-editing-content-control *:before, .inline-editing-content-control *:after,
.mddialog *, .mddialog *:before, .mddialog *:after
{ 
    box-sizing: content-box;
}


ul.command-bar {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

    ul.command-bar li {
        display: inline;
        margin: 0;
        padding: 0;
    }


/* COLLAPSIBLE TOP BAR */
.collapsedtopbar {
    width: 320px;
    /*background-color: transparent;*/
    opacity:0.5;
}


.expandedtopbar {
    width: 100%;
    background-color: #333333;
}

.inline-editing-topbar a.collapse-button {
    width: 20px;
}

.inline-editing-topbar a .icon-chevron-right {
    padding-left: 4px;
}


.inline-editing-topbar a i.icon-chevron-left {
    padding-left: 4px;
}



/* LINKS IN TOP BAR */

.inline-editing-topbar a:link,
.inline-editing-topbar a:visited {
    background-color: #333333;
    color: #fff;
    text-decoration: none;
    font-size: 14px; /*1.077em;*/
    display: block;
    float: left;
    height: 26px;
    padding: 12px 18px;
    border-right: solid 1px #000;
    line-height: 24px;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.50);

}


.inline-editing-topbar a:hover {
    background: #484b40;
    color: #fff;
    text-decoration: none;
}

.inline-editing-topbar a i {
    margin-right: 4px;
}


a:link.topbaractivelink,
a:visited.topbaractivelink,
a:active .topbaractivelink {
    background: #3A822E;
    color: #fff;
    text-decoration: none;
}


.inline-editing-topbar a#dashboard-link {
    background: url('images/orchardLogo.gif') no-repeat scroll 32px 0% #333333;
    display: block;
    width: 60px;
    text-indent: -9999px;
}


/* TOP RIGHT INFO AREA */
li#infoarea-wrapper {
    float: right;
    height: 50px;
    color: #fff;   
}

ul#infoarea {
    padding-top: 12px;    
}

ul#infoarea li{
    display:inline;
    padding:0;
    margin:0;
}

/* USER INFO AREA */

#inline-user-wrapper {
    float:right;
}

.dropit {
    list-style: none;
	padding: 0;
	margin: 0;
}
.dropit .dropit-trigger {
     position: relative;
     border-left:solid 1px red;    
}

.dropit .dropit-trigger > a {
     margin-left:10px;
     border-left:solid 1px #000;    
}

.dropit .dropit-submenu {
    position: absolute;
    top: 100%;
    left: 0;  /* dropdown left or right */
    z-index: 1000;
    display: none;
    min-width: 170px;
    width:170px;
    list-style: none;
	padding: 0;
	margin: 50px 0px 0px -100px;
}
.dropit .dropit-submenu a {
   display:block;
   border-bottom:solid 1px #000;
   width:170px;
}
.dropit .dropit-open .dropit-submenu { display: block;}


/*  BUTTONS BAR FOR EACH EDITABLE PART */

.inline-editing-content-control ul.actions-controls {
    list-style-type: none;
    margin: 0;
    padding: 0;
    border: #c2c2c2;
    background-color: #fafafa;
    margin: -43px 0px 0px 0px;
    z-index: 80000;
}

.inline-editing-content-control .actions-controls li {
    display: inline;
    float: right;
    border-left: #000;
}

.inline-editing-content-control .actions-controls {
    float: right;
    padding: 0;
}


    .inline-editing-content-control .actions-controls li.info {
        padding: 4px 9px;
        border: 1px solid #E3E3E3;
        border-right: none;
    }



    .inline-editing-content-control .actions-controls a {
        display: block;
        padding: 5px 8px;
        color: #343434;
        border: solid 1px #e3e3e3;
    }

    .inline-editing-content-control .actions-controls .dashboard a {
        background: url('images/icon-dashboard.gif') no-repeat scroll 8px 6px transparent;
        text-indent: -9999px;
        display: block;
        width: 16px;
        height: 18px;
    }

    .inline-editing-content-control .actions-controls a:hover {
        background-color: #ededed;
        text-decoration: none;
    }

    
.iconeditclean {
    color: #343434;
}

.iconeditdirty {
    color: #f15100;
}


/* BADGES : NOW ONLY IN TOPBAR */
a .badge {
    position: absolute;
    right: -10px;
    top: -5px;
}

.badge {
    background-color: #999999;
    border-radius: 10px;
    color: #FFFFFF;
    display: inline-block;
    font-size: 12px;
    font-weight: bold;
    line-height: 1;
    min-width: 10px;
    padding: 3px 7px;
    text-align: center;
    vertical-align: baseline;
    white-space: nowrap;
}

.badge-warning {
    background-color: #e4890b;
}

